gitops/apps/plex-route/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: plex
subsets:
  - addresses:
      - ip: 10.254.0.3
    ports:
      - port: 32400
