gitops/apps/plex-route/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
    - port: 32400
      targetPort: 32400
