gitops/apps/plex-route/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
spec:
  hostnames:
  - plex.didactiklabs.io
  parentRefs:
  - name: public
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - name: plex
      port: 32400
    matches:
    - path:
        type: PathPrefix
        value: /
